# ros_gz_project_template

./: .gitignore  README.md  flake.nix  overlay.nix  shell.nix
ros_gz_go_application/: CMakeLists.txt  build.sh  cgo-flags.env  generate.go  go.mod  go.sum  main.go  package.nix  package.xml  tools.go
ros_gz_go_application/msgs/: msgs.gen.go
ros_gz_go_application/msgs/action_msgs/msg/: GoalInfo.gen.go  GoalStatus.gen.go  GoalStatusArray.gen.go  common.gen.go
ros_gz_go_application/msgs/action_msgs/srv/: CancelGoal.gen.go  CancelGoal_Request.gen.go  CancelGoal_Response.gen.go  common.gen.go
ros_gz_go_application/msgs/actionlib_msgs/msg/: GoalID.gen.go  GoalStatus.gen.go  GoalStatusArray.gen.go  common.gen.go
ros_gz_go_application/msgs/actuator_msgs/msg/: Actuators.gen.go  ActuatorsAngularPosition.gen.go  ActuatorsAngularVelocity.gen.go  ActuatorsLinearPosition.gen.go  ActuatorsLinearVelocity.gen.go  ActuatorsNormalized.gen.go  ActuatorsPosition.gen.go  ActuatorsVelocity.gen.go  common.gen.go
ros_gz_go_application/msgs/builtin_interfaces/msg/: Duration.gen.go  Time.gen.go  common.gen.go
ros_gz_go_application/msgs/composition_interfaces/srv/: ListNodes.gen.go  ListNodes_Request.gen.go  ListNodes_Response.gen.go  LoadNode.gen.go  LoadNode_Request.gen.go  LoadNode_Response.gen.go  UnloadNode.gen.go  UnloadNode_Request.gen.go  UnloadNode_Response.gen.go  common.gen.go
ros_gz_go_application/msgs/diagnostic_msgs/msg/: DiagnosticArray.gen.go  DiagnosticStatus.gen.go  KeyValue.gen.go  common.gen.go
ros_gz_go_application/msgs/diagnostic_msgs/srv/: AddDiagnostics.gen.go  AddDiagnostics_Request.gen.go  AddDiagnostics_Response.gen.go  SelfTest.gen.go  SelfTest_Request.gen.go  SelfTest_Response.gen.go  common.gen.go
ros_gz_go_application/msgs/geometry_msgs/msg/: Accel.gen.go  AccelStamped.gen.go  AccelWithCovariance.gen.go  AccelWithCovarianceStamped.gen.go  Inertia.gen.go  InertiaStamped.gen.go  Point.gen.go  Point32.gen.go  PointStamped.gen.go  Polygon.gen.go  PolygonInstance.gen.go  PolygonInstanceStamped.gen.go  PolygonStamped.gen.go  Pose.gen.go  Pose2D.gen.go  PoseArray.gen.go  PoseStamped.gen.go  PoseWithCovariance.gen.go  Quaternion.gen.go  (+14 more)
(+312 files in other folders)
